Fix scrolling bug that caused main image to jump when adding stick navbar

--- a/wheres-waldo/src/App.css
+++ b/wheres-waldo/src/App.css
@@ -89,31 +89,38 @@ html,body{
 
 .find-people-container{
   width:100%;
+  height:10vw;
   display:flex;
   justify-content: center;
   align-content: center;
-  padding-top:1vw;
-  padding-bottom:1.5vw;
+  padding-top:0.5vw;
   background-color: white;
 }
 .people{
   display:flex;
   flex-wrap: wrap;
+  margin:0.5vw;
   width:8vw;
+}
+
+.people-img-container{
+  display:flex;
+  justify-content: center;
+  align-content: center;
+  width:100%;
 }
 
 .people-img:hover{
   background:yellow;
 }
 .people-label{
-  font-size:20px;
+  font-size:15px;
   text-align:center;
   width:100%;
 }
 .find-people-container img{
-  width:6vw;
-  height:6vw;
-  margin:1vw;
+  width:5vw;
+  height:5vw;
   border: solid black 2px;
   border-radius: 50%;
 }
@@ -125,6 +132,10 @@ html,body{
   align-content: center;
 }
 
+.shift-main-image{
+  margin-top:10.5vw;
+}
+
 .main-img{
   height:1920px;
   width:1280px;
@@ -134,6 +145,7 @@ html,body{
   position:fixed;
   top:0;
   width:100%;
+  z-index: 1;
 }
 
 .rectBox { 
